feat: add PersonDtoMapper to centralize mapping of Person entities to DTOs