@@ -1,15 +1,10 @@
 package com.ase.stammdatenverwaltung.services;
 
 import com.ase.stammdatenverwaltung.clients.KeycloakClient;
-import com.ase.stammdatenverwaltung.dto.EmployeeDetailsDTO;
 import com.ase.stammdatenverwaltung.dto.KeycloakUser;
-import com.ase.stammdatenverwaltung.dto.LecturerDetailsDTO;
 import com.ase.stammdatenverwaltung.dto.PersonDetailsDTO;
-import com.ase.stammdatenverwaltung.dto.StudentDetailsDTO;
-import com.ase.stammdatenverwaltung.entities.Employee;
-import com.ase.stammdatenverwaltung.entities.Lecturer;
 import com.ase.stammdatenverwaltung.entities.Person;
-import com.ase.stammdatenverwaltung.entities.Student;
+import com.ase.stammdatenverwaltung.mapper.PersonDtoMapper;
 import com.ase.stammdatenverwaltung.repositories.EmployeeRepository;
 import com.ase.stammdatenverwaltung.repositories.LecturerRepository;
 import com.ase.stammdatenverwaltung.repositories.PersonRepository;
@@ -43,6 +38,7 @@ public class PersonService {
   private final LecturerRepository lecturerRepository;
   private final EmployeeRepository employeeRepository;
   private final KeycloakClient keycloakClient;
+  private final PersonDtoMapper personDtoMapper;
 
   /**
    * Finds all persons and optionally enriches them with data from Keycloak.
@@ -72,20 +68,7 @@ public class PersonService {
     if (withDetails) {
       return persons.stream().map(this::enrichPersonWithKeycloakData).collect(Collectors.toList());
     }
-    return persons.stream()
-        .map(
-            p -> {
-              if (p instanceof Lecturer) {
-                return new LecturerDetailsDTO((Lecturer) p);
-              } else if (p instanceof Employee) {
-                return new EmployeeDetailsDTO((Employee) p);
-              } else if (p instanceof Student) {
-                return new StudentDetailsDTO((Student) p);
-              } else {
-                return new PersonDetailsDTO(p);
-              }
-            })
-        .collect(Collectors.toList());
+    return persons.stream().map(personDtoMapper::map).collect(Collectors.toList());
   }
 
   /**
@@ -107,33 +90,16 @@ public class PersonService {
       return enrichPersonWithKeycloakData(person);
     }
 
-    if (person instanceof Lecturer) {
-      return new LecturerDetailsDTO((Lecturer) person);
-    } else if (person instanceof Employee) {
-      return new EmployeeDetailsDTO((Employee) person);
-    } else if (person instanceof Student) {
-      return new StudentDetailsDTO((Student) person);
-    } else {
-      return new PersonDetailsDTO(person);
-    }
+    return personDtoMapper.map(person);
   }
 
   private PersonDetailsDTO enrichPersonWithKeycloakData(Person person) {
-    PersonDetailsDTO dto;
-    if (person instanceof Lecturer) {
-      dto = new LecturerDetailsDTO((Lecturer) person);
-    } else if (person instanceof Employee) {
-      dto = new EmployeeDetailsDTO((Employee) person);
-    } else if (person instanceof Student) {
-      dto = new StudentDetailsDTO((Student) person);
-    } else {
-      dto = new PersonDetailsDTO(person);
-    }
+    PersonDetailsDTO dto = personDtoMapper.map(person);
 
     try {
       List<KeycloakUser> keycloakUsers = keycloakClient.findUserById(person.getId()).block();
       if (keycloakUsers != null && !keycloakUsers.isEmpty()) {
-        KeycloakUser keycloakUser = keycloakUsers.get(0);
+        KeycloakUser keycloakUser = keycloakUsers.getFirst();
         dto.setUsername(keycloakUser.getUsername());
         dto.setFirstName(keycloakUser.getFirstName());
         dto.setLastName(keycloakUser.getLastName());
